--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.0",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
     "rapid-draughts": "^1.0.2",
     "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
