--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
 
   db:
     image: postgres:13
-    container_name: postgres-db
+    container_name: postgres-database
     restart: always
     environment:
       POSTGRES_USER: user
