--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "rapid-draughts": "^1.0.2",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.1"
   }
 }
