--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "rapid-draughts": "^1.0.2",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
-    "sqlite3": "^5.1.7",
-    "jsonwebtoken": "^8.5.1"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "typescript": "^5.0.0",
-    "@types/jsonwebtoken": "^8.5.1"
+    "@types/jsonwebtoken": "^8.5.1",
+    "typescript": "^5.0.0"
   }
 }
