--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "resolveJsonModule": true
   },
 
-  "include": ["src/**/*.ts", "src/**/*.js", "types/**/*.d.ts"], // Assicurati di includere anche i file .js
+  "include": ["src/**/*.ts", "src/**/*.js", "types/**/*.d.ts"],
 
   "exclude": [
     "node_modules"
