--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "checkers_pa",
   "version": "1.0.0",
+  "description": "A checkers game backend built with Node.js, Express, and Sequelize",
   "main": "index.js",
   "scripts": {
     "start": "node dist/app.js",
     "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["checkers", "game", "express", "sequelize"],
+  "author": "Your Name",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
@@ -22,11 +22,13 @@
     "rapid-draughts": "^1.0.2",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
-    "sqlite3": "^5.1.7"
+    "pdfmake": "^0.2.9"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/pdfmake": "^0.2.9",
+    "sqlite3": "^5.1.7",
     "typescript": "^5.0.0"
   }
 }
