--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,13 @@ services:
       - db
     env_file:
       - .env
-    command: npm start
+    command: >
+      bash -c "
+      npx sequelize-cli db:migrate:undo:all --config src/database/config.js &&
+      npx sequelize-cli db:migrate --config src/database/config.js --migrations-path src/database/migrations &&
+      npx sequelize-cli db:seed:undo:all --config src/database/config.js --seeders-path src/database/seeders &&
+      npx sequelize-cli db:seed:all --config src/database/config.js --seeders-path src/database/seeders &&
+      npm start"
 
   db:
     image: postgres:13
