--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - .env
     command: >
       bash -c "
+      sleep 1 &&
+            ./wait-for-it.sh db:5432 --timeout=60 --strict -- 
       npx sequelize-cli db:migrate:undo:all --config src/database/config.js &&
       npx sequelize-cli db:migrate --config src/database/config.js --migrations-path src/database/migrations &&
       npx sequelize-cli db:seed:undo:all --config src/database/config.js --seeders-path src/database/seeders &&
