--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc"
   },
   "keywords": ["checkers", "game", "express", "sequelize"],
-  "author": "Your Name",
+  "author": "Diego Santarelli",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
